Get alert type and ensure overlay stays on the center and on top of the visible alerts

--- a/src/dashboard/sections/Alerts/styles.css
+++ b/src/dashboard/sections/Alerts/styles.css
@@ -28,9 +28,14 @@
   font-size: 15px;
 }
 
+.alerts-body-wrapper {
+  overflow: hidden;
+  position: relative;
+}
+
 .alerts-body {
   overflow-y: auto;
-  position: relative;
+  height: 100%;
 }
 
 .alerts-decision--positive {
